--- a/index.html
+++ b/index.html
@@ -29,11 +29,11 @@
               <ul class="list-group" id="filters" style="list-style-type:none">
                 <li class="filter list-group-item">
                   <label for="date">Filter by Date</label>
-                  <input class="form-control" id="datetime" type="text" placeholder="1/1/2010"> <!-- select -->
+                  <input class="form-control" id="datetime" type="text" placeholder="1/1/2010">
                 </li>
               </ul>
               <br>
-              <button id="filter-btn" type="button" class="btn btn-secondary text-uppercase" style="font-weight: lighter">Filter Table</button> <!-- select -->
+              <button id="filter-btn" type="button" class="btn btn-secondary text-uppercase" style="font-weight: lighter">Filter Table</button>
               <br><br>
               <button id="unfilter-btn" type="button" class="btn btn-secondary text-uppercase" style="font-weight: lighter">Unfilter Table</button>
             </div>
@@ -56,7 +56,7 @@
                   <th class="table-head">Comments</th>
                 </tr>
               </thead>
-              <tbody></tbody> <!-- select -->
+              <tbody></tbody>
             </table>
           </div>
         </div>
